// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] render default component test should render Row type component when labelPosition props is row 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#e0e0e0",
            "borderRadius": 6,
            "borderWidth": 1,
            "flexDirection": "row",
            "paddingLeft": 20,
            "width": 335,
          },
          undefined,
          false,
        ]
      }
      testID="EditText-test"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#828282",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "800",
              "lineHeight": 19,
            },
          ]
        }
      >
        Label
      </Text>
      <TextInput
        allowFontScaling={true}
        placeholder="text"
        placeholderTextColor="#BDBDBD"
        rejectResponderTermination={true}
        secureTextEntry={false}
        style={
          Array [
            Object {
              "color": "#4f4f4f",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "500",
              "height": 56,
              "lineHeight": 27,
              "paddingBottom": 15,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 14,
              "width": "100%",
            },
          ]
        }
        testID="TextInput-row-test"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;

exports[`[EditText] render default component test should render with error message when isErrored props is true 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "width": 335,
          },
        ]
      }
      testID="EditText-test"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#828282",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "800",
              "lineHeight": 19,
              "marginBottom": 6,
            },
          ]
        }
      >
        Label
      </Text>
      <TextInput
        allowFontScaling={true}
        placeholder="text"
        placeholderTextColor="#BDBDBD"
        rejectResponderTermination={true}
        secureTextEntry={false}
        style={
          Array [
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 6,
              "borderWidth": 1,
              "color": "#4f4f4f",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "500",
              "height": 56,
              "lineHeight": 27,
              "paddingBottom": 15,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 14,
              "width": "100%",
            },
            undefined,
            Object {
              "borderColor": "#E54E4E",
            },
          ]
        }
        testID="TextInput-test"
        underlineColorAndroid="transparent"
      />
      <Text
        style={
          Object {
            "color": "#E54E4E",
            "marginTop": 8,
          }
        }
      >
        Default error message
      </Text>
    </View>
  </View>
</View>
`;

exports[`[EditText] render default component test should render without crasing 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "width": 335,
          },
        ]
      }
      testID="EditText-test"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#828282",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "800",
              "lineHeight": 19,
              "marginBottom": 6,
            },
          ]
        }
      >
        Label
      </Text>
      <TextInput
        allowFontScaling={true}
        placeholder="text"
        placeholderTextColor="#BDBDBD"
        rejectResponderTermination={true}
        secureTextEntry={false}
        style={
          Array [
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 6,
              "borderWidth": 1,
              "color": "#4f4f4f",
              "fontSize": 20,
              "fontStyle": "normal",
              "fontWeight": "500",
              "height": 56,
              "lineHeight": 27,
              "paddingBottom": 15,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 14,
              "width": "100%",
            },
            undefined,
            false,
          ]
        }
        testID="TextInput-test"
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
</View>
`;
